--- a/Source/f_stop/f_stop.sample.ini
+++ b/Source/f_stop/f_stop.sample.ini
@@ -8,6 +8,13 @@
 	; What port to listen on?
 	;Port = 8000
 
+	; Whether to listen on https or http.
+	;UseSSL = false
+
+	; Token used for legacy authentication for administration of caps.  Disabled if blank.
+	; Please note that while I plan on creating a much better system, right now you need to use this.
+	;AdminToken = "changemenow"
+
 [Cache]
 	; Number of seconds each entry into the negative cache will live.  0 or negative will disable.  Default is 120 seconds which is 2 minutes.
 	;NegativeCacheItemLifetimeSeconds = 120
