--- a/Source/f_stopHttpApiTests/packages.config
+++ b/Source/f_stopHttpApiTests/packages.config
@@ -10,8 +10,10 @@
   <package id="NUnit" version="3.9.0" targetFramework="net45" />
   <package id="openstack.net" version="1.7.7" targetFramework="net461" />
   <package id="protobuf-net" version="2.3.2" targetFramework="net461" />
+  <package id="RestSharp" version="106.2.0" targetFramework="net461" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net461" />
   <package id="System.Linq" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection.TypeExtensions" version="4.4.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
   <package id="Trove.Nini" version="1.1.0.0" targetFramework="net45" />
 </packages>
