--- a/Source/LibF_Stop/LibF_Stop.csproj
+++ b/Source/LibF_Stop/LibF_Stop.csproj
@@ -69,17 +69,23 @@
     <Reference Include="Chattel-AssetTools">
       <HintPath>..\..\packages\Chattel-AssetTools.1.4.0.52\lib\net461\Chattel-AssetTools.dll</HintPath>
     </Reference>
-    <Reference Include="Nancy">
-      <HintPath>..\..\packages\Nancy.1.4.1\lib\net40\Nancy.dll</HintPath>
-    </Reference>
     <Reference Include="Nancy.Hosting.Self">
       <HintPath>..\..\packages\Nancy.Hosting.Self.1.4.1\lib\net40\Nancy.Hosting.Self.dll</HintPath>
     </Reference>
+    <Reference Include="Nancy">
+      <HintPath>..\..\packages\Nancy.1.4.4\lib\net40\Nancy.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="F_Stop.cs" />
+    <Compile Include="F_StopRouter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\PIDFileManager.cs" />
+    <Compile Include="Capability.cs" />
+    <Compile Include="CapAdministration.cs" />
+    <Compile Include="F_StopBootstrapper.cs" />
+    <Compile Include="F_Stop.cs" />
+    <Compile Include="ConfigSingleton.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
