--- a/Source/LibF_Stop/LibF_Stop.csproj
+++ b/Source/LibF_Stop/LibF_Stop.csproj
@@ -80,12 +80,12 @@
   <ItemGroup>
     <Compile Include="F_StopRouter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\PIDFileManager.cs" />
     <Compile Include="Capability.cs" />
     <Compile Include="CapAdministration.cs" />
     <Compile Include="F_StopBootstrapper.cs" />
     <Compile Include="F_Stop.cs" />
     <Compile Include="ConfigSingleton.cs" />
+    <Compile Include="PIDFileManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
