--- a/Source/f_stopUnitTests/LibF_StopUnitTests.csproj
+++ b/Source/f_stopUnitTests/LibF_StopUnitTests.csproj
@@ -6,7 +6,7 @@
     <ProjectGuid>{3600919D-1C63-4CDD-80BF-85F07C4B0B22}</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>f_stopUnitTests</RootNamespace>
-    <AssemblyName>f_stopUnitTests</AssemblyName>
+    <AssemblyName>LibF_StopUnitTests</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
