Made using a wrong admin token throw a custom exception
This allows for the logging needs in the router interface.

--- a/Source/LibF_Stop/LibF_Stop.csproj
+++ b/Source/LibF_Stop/LibF_Stop.csproj
@@ -86,6 +86,7 @@
     <Compile Include="F_Stop.cs" />
     <Compile Include="ConfigSingleton.cs" />
     <Compile Include="PIDFileManager.cs" />
+    <Compile Include="InvalidAdminTokenException.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
