--- a/Source/f_stop/f_stop.sample.ini
+++ b/Source/f_stop/f_stop.sample.ini
@@ -20,6 +20,9 @@
 	;NegativeCacheItemLifetimeSeconds = 120
 
 [AssetsRead]
+	; Path to the folder where the asset cache will be stored.  Caching disabled if missing or empty, or if folder is missing.
+	;CachePath = ""
+
 	; Comma-delimited set of Asset server config sections, eg: "AssetWHIP1, AssetWHIP2, LunacyExample"
 	; The sections have to be specified here or they will not be read, no matter what you define elsewhere.
 	;Servers = ""
