--- a/Source/f_stopHttpApiTests/ApiTests.F_Stop.ini
+++ b/Source/f_stopHttpApiTests/ApiTests.F_Stop.ini
@@ -1,4 +1,7 @@
 ﻿[AssetsRead]
+	; Path to the folder where the asset cache will be stored.  Caching disabled if missing or empty, or if folder is missing.
+	CachePath = "ApiTestsCache"
+
 	; Comma-delimited set of Asset server config sections, eg: "AssetWHIP1, AssetWHIP2, LunacyExample"
 	; The sections have to be specified here or they will not be read, no matter what you define elsewhere.
 	;Servers = ""
