Nearly complete GetAsset tests and router
I decided to set MIME type on magic number as it's always right, even if the type attribute of the asset is wrong for some inane reason.

--- a/Source/LibF_Stop/LibF_Stop.csproj
+++ b/Source/LibF_Stop/LibF_Stop.csproj
@@ -87,6 +87,8 @@
     <Compile Include="ConfigSingleton.cs" />
     <Compile Include="PIDFileManager.cs" />
     <Compile Include="InvalidAdminTokenException.cs" />
+    <Compile Include="InvalidCapabilityIdException.cs" />
+    <Compile Include="WrongAssetTypeException.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
