Lots of work connecting the Capability system
Several loose ends here, but the callback pattern was done because that's the way the new WIP version of Chattel works.

--- a/Source/LibF_Stop/LibF_Stop.csproj
+++ b/Source/LibF_Stop/LibF_Stop.csproj
@@ -89,6 +89,11 @@
     <Compile Include="InvalidAdminTokenException.cs" />
     <Compile Include="InvalidCapabilityIdException.cs" />
     <Compile Include="WrongAssetTypeException.cs" />
+    <Compile Include="AssetRequest.cs" />
+    <Compile Include="AssetIdMismatchException.cs" />
+    <Compile Include="AssetAlreadySetException.cs" />
+    <Compile Include="CapQueueFilledException.cs" />
+    <Compile Include="ConfigException.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
