--- a/Source/f_stop/f_stop.sample.ini
+++ b/Source/f_stop/f_stop.sample.ini
@@ -15,6 +15,9 @@
 	; Please note that while I plan on creating a much better system, right now you need to use this.
 	;AdminToken = "changemenow"
 
+	; Comma-delimited set of valid asset type numbers.  Default is "0, 49" for basic JPEG-2000 textures and mesh assets.
+	;AllowedAssetTypes = "0, 49"
+
 [Cache]
 	; Number of seconds each entry into the negative cache will live.  0 or negative will disable.  Default is 120 seconds which is 2 minutes.
 	;NegativeCacheItemLifetimeSeconds = 120
