Fixed NRE in Capability
If the asset doesn't exist it's going to be null.  Needed a way to signal that and this setup does that with exceptions.

--- a/Source/LibF_Stop/LibF_Stop.csproj
+++ b/Source/LibF_Stop/LibF_Stop.csproj
@@ -94,6 +94,7 @@
     <Compile Include="AssetAlreadySetException.cs" />
     <Compile Include="CapQueueFilledException.cs" />
     <Compile Include="ConfigException.cs" />
+    <Compile Include="AssetIdUnknownException.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
