Converted from Exception-based conditional logic to value-type
Experiments show this is faster, and experience says it's easier to maintain than what I did before.

--- a/Source/LibF_Stop/LibF_Stop.csproj
+++ b/Source/LibF_Stop/LibF_Stop.csproj
@@ -87,14 +87,11 @@
     <Compile Include="ConfigSingleton.cs" />
     <Compile Include="PIDFileManager.cs" />
     <Compile Include="InvalidAdminTokenException.cs" />
-    <Compile Include="InvalidCapabilityIdException.cs" />
-    <Compile Include="WrongAssetTypeException.cs" />
     <Compile Include="AssetRequest.cs" />
     <Compile Include="AssetIdMismatchException.cs" />
     <Compile Include="AssetAlreadySetException.cs" />
-    <Compile Include="CapQueueFilledException.cs" />
-    <Compile Include="ConfigException.cs" />
     <Compile Include="AssetIdUnknownException.cs" />
+    <Compile Include="AssetError.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
