Introducing the Range struct
Not generic yet because I don't yet need it to be.
Simply a storage system for integer ranges.

--- a/Source/LibF_Stop/LibF_Stop.csproj
+++ b/Source/LibF_Stop/LibF_Stop.csproj
@@ -92,6 +92,7 @@
     <Compile Include="AssetAlreadySetException.cs" />
     <Compile Include="AssetIdUnknownException.cs" />
     <Compile Include="AssetError.cs" />
+    <Compile Include="Range.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
