--- a/Source/f_stopUnitTests/LibF_StopUnitTests.csproj
+++ b/Source/f_stopUnitTests/LibF_StopUnitTests.csproj
@@ -32,6 +32,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="TestCapAdministration.cs" />
+    <Compile Include="TestRange.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
