--- a/Source/f_stopHttpApiTests/f_stopHttpApiTests.csproj
+++ b/Source/f_stopHttpApiTests/f_stopHttpApiTests.csproj
@@ -71,6 +71,7 @@
     <Reference Include="RestSharp">
       <HintPath>..\..\packages\RestSharp.106.2.1\lib\net452\RestSharp.dll</HintPath>
     </Reference>
+    <Reference Include="System.Net.Http" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="TestRemoveCap.cs" />
