--- a/Source/f_stopHttpApiTests/f_stopHttpApiTests.csproj
+++ b/Source/f_stopHttpApiTests/f_stopHttpApiTests.csproj
@@ -72,6 +72,7 @@
       <HintPath>..\..\packages\RestSharp.106.2.1\lib\net452\RestSharp.dll</HintPath>
     </Reference>
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.Formatting" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="TestRemoveCap.cs" />
