--- a/Source/f_stopHttpApiTests/packages.config
+++ b/Source/f_stopHttpApiTests/packages.config
@@ -6,6 +6,7 @@
   <package id="InWorldz.Whip.Client" version="1.1.0.6" targetFramework="net461" />
   <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="Marvin.JsonPatch.Signed" version="0.7.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="NUnit" version="3.9.0" targetFramework="net45" />
   <package id="openstack.net" version="1.7.7" targetFramework="net461" />
@@ -13,7 +14,12 @@
   <package id="RestSharp" version="106.2.1" targetFramework="net461" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net461" />
   <package id="System.Linq" version="4.3.0" targetFramework="net461" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net461" />
   <package id="System.Reflection.TypeExtensions" version="4.4.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
   <package id="Trove.Nini" version="1.1.0.0" targetFramework="net45" />
 </packages>
