--- a/Source/f_stopUnitTests/packages.config
+++ b/Source/f_stopUnitTests/packages.config
@@ -1,4 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Chattel" version="1.5.0.66" targetFramework="net461" />
+  <package id="Flurl.Http.Signed" version="0.7.0" targetFramework="net461" />
+  <package id="Flurl.Signed" version="1.0.10" targetFramework="net461" />
+  <package id="InWorldz.Whip.Client" version="1.1.0.6" targetFramework="net461" />
+  <package id="Marvin.JsonPatch.Signed" version="0.7.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
   <package id="NUnit" version="3.9.0" targetFramework="net461" />
+  <package id="openstack.net" version="1.7.7" targetFramework="net461" />
+  <package id="protobuf-net" version="2.3.3" targetFramework="net461" />
+  <package id="Trove.Nini" version="1.1.0.0" targetFramework="net461" />
 </packages>
