--- a/Source/LibF_Stop/LibF_Stop.csproj
+++ b/Source/LibF_Stop/LibF_Stop.csproj
@@ -67,15 +67,18 @@
       <HintPath>..\..\packages\Nancy.1.4.4\lib\net40\Nancy.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="protobuf-net">
-      <HintPath>..\..\packages\protobuf-net.2.3.3\lib\net40\protobuf-net.dll</HintPath>
-    </Reference>
     <Reference Include="Chattel">
       <HintPath>..\..\packages\Chattel.1.5.0.66\lib\net461\Chattel.dll</HintPath>
     </Reference>
     <Reference Include="Chattel-AssetTools">
       <HintPath>..\..\packages\Chattel-AssetTools.1.5.0.66\lib\net461\Chattel-AssetTools.dll</HintPath>
     </Reference>
+    <Reference Include="protobuf-net">
+      <HintPath>..\..\packages\protobuf-net.2.3.4\lib\net40\protobuf-net.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Configuration" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="F_StopRouter.cs" />
