Added tests for existing Capability features
Had to build some infrastructure to make this happen.

--- a/Source/f_stopUnitTests/LibF_StopUnitTests.csproj
+++ b/Source/f_stopUnitTests/LibF_StopUnitTests.csproj
@@ -64,6 +64,8 @@
   <ItemGroup>
     <Compile Include="TestCapAdministration.cs" />
     <Compile Include="TestRange.cs" />
+    <Compile Include="TestCapability.cs" />
+    <Compile Include="Constants.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
