Unit test for AssetRequest along with fixes.

--- a/Source/f_stopUnitTests/LibF_StopUnitTests.csproj
+++ b/Source/f_stopUnitTests/LibF_StopUnitTests.csproj
@@ -66,6 +66,7 @@
     <Compile Include="TestRange.cs" />
     <Compile Include="TestCapability.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="TestAssetRequest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
